--- a/webpage.html
+++ b/webpage.html
@@ -14,12 +14,18 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+
+
+        <!-- MY Style Sheet -->
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <div class="container-fluid">
         <div class="row"> 
             <div class="col-sm-12"></div>
         </div>
+
         <!--
         <div class="row">
             <div class="col-sm-5"></div>
