--- a/webpage.html
+++ b/webpage.html
@@ -15,6 +15,9 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 
+        <!-- Animate.css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
 
         <!-- MY Style Sheet -->
         <link rel="stylesheet" href="style.css">
@@ -62,28 +65,44 @@
             <div class-"col-sm-1"></div>
         </div>
 
+        <hr class="blueBar">
+
         <div class="tab-content">
-            <div id="home" class="tab-pane active">
-                <h3>Home</h3>
+            <div id="home" class="tab-pane active animated fadeInRight">
+                <hr class="homeLine" id="homeLineTop">
+                <h1 id="homeHeader">Ryan Kelly</h1>
+                <h6 id="homeText">Software Engineer - Game Designer - Composer</h6>
+                <hr class="homeLine" id="homeLineBottom">
+
+                <h4 id="contactText"><a href="mailto:rmk336@msn.com">Contact Me</a></h4>
+            </div>
+            <div id="whoami" class="tab-pane animated fadeInRight">
+                <h2>Who am I?</h2>
+                <p>Test</p>
+                <p>test</p>
+                <p>test</p>
+                <p>test</p>
+            </div>
+            <div id="games" class="tab-pane animated fadeInRight">
+                <h2>Games</h2>
                 <p>Test</p>
             </div>
-            <div id="whoami" class="tab-pane">
-                <h3>Who am I?</h3>
-                <p>Test</p>
+            <div id="music" class="tab-pane animated fadeInRight">
+                <h2>Music</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/q4GT8ralDTw" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div id="games" class="tab-pane">
-                <h3>Games</h3>
-                <p>Test</p>
-            </div>
-            <div id="music" class="tab-pane">
-                <h3>Music</h3>
-                <p>Test</p>
-            </div>
-            <div id="sharpeez" class="tab-pane">
-                <h3>Sharpeez</h3>
-                <p>Test</p>
+            <div id="sharpeez" class="tab-pane animated fadeInRight">
+                <h2 id="sharpeezHeader">Sharpeez</h2>
+                <p id="sharpeezText">
+                    Sharpeez is a website that's best described as "YouTube for comics". The site offers users the ability to both upload comics and create them on the website itself, while also giving plenty of tools for reading other users' comics and interacting through likes and comments. The biggest assignment I've worked on, Sharpeez was a semester long project for CSE 308: Software Engineering.
+                    <br>
+                    <br>
+                    For this project, we worked in teams of 4, with each team member having a specific role. I was my team's Lead Designer. This meant I had the final say on all aesthetic choices, and most of my work was concerned with the front-end, using HTML, CSS and Javascript.
+                </p>
             </div>
         </div>
+
+        <hr class="blueBar">
 
     </div>
 
