Changed email link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
         </div>
 
-        <h4 id="contactText"><a href="mailto:rmk336@msn.com">Contact Me</a></h4>
+        <h4 id="contactText"><a href="mailto:ryankelly336@gmail.com">Contact Me</a></h4>
         <hr class="blueBar">
 
     </div>
