Working on who am i page

--- a/index.html
+++ b/index.html
@@ -82,11 +82,19 @@
 
             <!-- Who am I Tab -->
             <div id="whoami" class="tab-pane animated fadeInRight tabWithBackground">
-                <h2>Who am I?</h2>
-                <p>Test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
+                <h2 id="whoamiHeader">Who am I?</h2>
+                <div class="row">
+                    <div class="col-sm-8" id="whoamiText">
+                        <p>Hey there, I'm Ryan Kelly. I'm a Software Engineer with a B.S. in Computer Science from Stony Brook University.
+                            <br>
+                            <br>
+                            My two loves are for video games and music. It's rare to find me spending my free time on anything other than one of those. I enjoy creating and playing both music and video games, and hope to one day make a living off of it. I'd be just as happy making a game as I would be writing its soundtrack.
+                        </p>
+                    </div>
+                    <div class="col-sm-2">
+                        <img src="tempPic.jpg" alt="Picture of Me" id="whoamiPicOfMe"> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
+                    </div>
+                </div>
             </div>
 
             <!-- Games Tab -->
@@ -113,7 +121,7 @@
                     For this project, we worked in teams of 4, with each team member having a specific role. I was my team's Lead Designer. This meant I had the final say on all aesthetic choices, and most of my work was concerned with the front-end, using HTML, CSS and Javascript.
                 </p>
                 <br>
-                <a href="http://www.sharpeezcomics.appspot.com"><img src="tempPic.jpg" alt="Sharpeez Logo" id="sharpeezLogo"></a>
+                <a href="http://www.sharpeezcomics.appspot.com"><img src="tempPic.jpg" alt="Sharpeez Logo" id="sharpeezLogo"></a> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
             </div>
         </div>
 
