Finished Who am I page (with temp pic)

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
             <!-- Who am I Tab -->
             <div id="whoami" class="tab-pane animated fadeInRight tabWithBackground">
+                <br>
                 <h2 id="whoamiHeader">Who am I?</h2>
+                <br>
                 <div class="row">
                     <div class="col-sm-8" id="whoamiText">
                         <p>Hey there, I'm Ryan Kelly. I'm a Software Engineer with a B.S. in Computer Science from Stony Brook University.
@@ -90,6 +92,11 @@
                             <br>
                             My two loves are for video games and music. It's rare to find me spending my free time on anything other than one of those. I enjoy creating and playing both music and video games, and hope to one day make a living off of it. I'd be just as happy making a game as I would be writing its soundtrack.
                         </p>
+                        <a href="resume.pdf">
+                            <div class="col-sm-3" id="whoamiResumeBox">
+                                <h3>Résumé</h3>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-sm-2">
                         <img src="tempPic.jpg" alt="Picture of Me" id="whoamiPicOfMe"> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
