let's try again

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <br>
                             My two loves are for video games and music. It's rare to find me spending my free time on anything other than one of those. I enjoy creating and playing both music and video games, and hope to one day make a living off of it. I'd be just as happy making a game as I would be writing its soundtrack.
                         </p>
-                        <a href="Resume.pdf">
+                        <a href="resume.pdf">
                             <div class="col-sm-3" id="whoamiResumeBox">
                                 <h3>Résumé</h3>
                             </div>
