Added pictures from other website (goodbye fox :( )

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </a>
                     </div>
                     <div class="col-sm-2">
-                        <img src="tempPic.jpg" alt="Picture of Me" id="whoamiPicOfMe"> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
+                        <img src="picOfMe.jpeg" alt="Picture of Me" id="whoamiPicOfMe"> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     For this project, we worked in teams of 4, with each team member having a specific role. I was my team's Lead Designer. This meant I had the final say on all aesthetic choices, and most of my work was concerned with the front-end, using HTML, CSS and Javascript.
                 </p>
                 <br>
-                <a href="http://www.sharpeezcomics.appspot.com"><img src="tempPic.jpg" alt="Sharpeez Logo" id="sharpeezLogo"></a> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
+                <a href="http://www.sharpeezcomics.appspot.com"><img src="sharpeezLogo.png" alt="Sharpeez Logo" id="sharpeezLogo"></a> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
             </div>
         </div>
 
