Fix formatting for mobile

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     For this project, we worked in teams of 4, with each team member having a specific role. I was my team's Lead Designer. This meant I had the final say on all aesthetic choices, and most of my work was concerned with the front-end, using HTML, CSS and Javascript.
                 </p>
                 <br>
-                <a href="http://www.sharpeezcomics.appspot.com"><img src="sharpeezLogo.png" alt="Sharpeez Logo" id="sharpeezLogo"></a> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
+                <a href="http://www.sharpeezcomics.appspot.com"><img src="sharpeezLogo.png" alt="Sharpeez Logo" id="sharpeezLogo"></a>
             </div>
         </div>
 
