--- a/index.html
+++ b/index.html
@@ -112,8 +112,35 @@
 
             <!-- Music Tab -->
             <div id="music" class="tab-pane animated fadeInRight tabWithBackground">
-                <h2>Music</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/q4GT8ralDTw" frameborder="0" allowfullscreen></iframe>
+                <br>
+                <h2 id="musicHeader">Music</h2>
+                <br>
+                <p id="musicText">
+                    When not playing games, I like to spend my free time listening to and creating music. I use a variety of tools from GarageBand and Logic Pro X to Famitracker and even Audacity to make both arrangements of existing songs and entirely new music.
+                </p>
+                <br>
+                <br>
+                <h4 class="musicSubHeader">Arrangements</h4>
+                <div class="row musicVideoBoxes">
+                    <div class="col-sm-4">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/q4GT8ralDTw" frameborder="0" allowfullscreen class="musicVideo"></iframe>
+                    </div>
+                    <div class="col-sm-6 musicVideoBoxContent">
+                        <p>
+                            A good portion of the music I've made are arrangements of video game music. This piece is a medley of songs from NES games I used to play on the old system in the basement, created in Logic Pro X. <a href="https://www.youtube.com/user/PiccoloMaster336">More arrangements can be found on my YouTube channel.</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row musicVideoBoxes">
+                    <div class="col-sm-4">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/VKOAqJoJxQU" frameborder="0" allowfullscreen class="musicVideo"></iframe>
+                    </div>
+                    <div class="col-sm-6 musicVideoBoxContent">
+                        <p>
+                            I also made several arrangements for my college's all-male acappella group, the High C's. I've arranged classics like Isn't She Lovely by Stevie Wonder and Build Me Up Buttercup by The Foundations, as well as lesser known songs like Here We Go by Dispatch, or this one, Spin Me Around by Patent Pending.
+                        </p>
+                    </div>
+                </div>
             </div>
 
             <!-- Sharpeez Tab -->
