Music Page's done for computers

--- a/index.html
+++ b/index.html
@@ -141,6 +141,57 @@
                         </p>
                     </div>
                 </div>
+                <br>
+                <hr id="musicDivider">
+                <br>
+                <h4 class="musicSubHeader">Original Compositions</h4>
+                <br>
+                <p id="musicOCText">
+                    I've also composed original music, including the full soundtracks for the 2 games I worked on for class projects, C[Lock] and Falling Simulator 2014.
+                </p>
+                <br>
+                <br>
+                <div class="row musicOCBoxes">
+                    <div class="col-sm-4 musicOCBoxAudio">
+                        <audio controls>
+                            <source src="BottleSong.mp3" type="audio/mpeg">
+                            Looks like your browser can&apos;t play this file
+                        </audio>
+                    </div>
+                    <div class="col-sm-6 musicOCBoxText">
+                        <p>
+                            A song I made in Audacity for my Computer Music class. Every note is made by manipulating a single recording of me blowing into an empty beer bottle, while the percussion comes from modified recordings of me slapping my chest and knee.
+                        </p>
+                    </div>
+                </div>
+                <div class="row musicOCBoxes">
+                    <div class="col-sm-4 musicOCBoxAudio">
+                        <audio controls>
+                            <source src="Level 1.mp3" type="audio/mpeg">
+                            Looks like your browser can&apos;t play this file
+                        </audio>
+                    </div>
+                    <div class="col-sm-6 musicOCBoxText">
+                        <p>
+                            The first level theme from the side-scrolling beat-em-up Chromatic Lock (C[Lock] for short). We were going with a retro art style, so chiptune music made in Famitracker seemed like a good choice.
+                        </p>
+                    </div>
+                </div>
+                <div class="row musicOCBoxes">
+                    <div class="col-sm-4 musicOCBoxAudio">
+                        <audio controls>
+                            <source src="A Leisurely Drop.mp3" type="audio/mpeg">
+                            Looks like your browser can&apos;t play this file
+                        </audio>
+                    </div>
+                    <div class="col-sm-6 musicOCBoxText">
+                        <p>
+                            The song used in levels 1 and 2 of Falling Simulator 2014, this track was made in Logic Pro X and was meant to sound very light-hearted and happy, like a typical "first level" song.
+                        </p>
+                    </div>
+                </div>
+                <br>
+                <hr style="opacity: 0;">
             </div>
 
             <!-- Sharpeez Tab -->
