--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                         <img src="picOfMe.jpeg" alt="Picture of Me" id="whoamiPicOfMe"> <!-- ~~~~~~~~~~~~~~~~~TEMP PIC~~~~~~~~~~~~~~~~~ -->
                     </div>
                 </div>
+                <br>
+                <hr style="opacity: 0;">
             </div>
 
             <!-- Games Tab -->
