Games tab done for computers

--- a/index.html
+++ b/index.html
@@ -108,8 +108,62 @@
 
             <!-- Games Tab -->
             <div id="games" class="tab-pane animated fadeInRight tabWithBackground">
-                <h2>Games</h2>
-                <p>Test</p>
+                <br>
+                <h2 id="gamesHeader">Games</h2>
+                <br>
+                <p id="gamesText">
+                    Over the last couple of years I've created many different games, both physical and digital. Here are some of my more noteworthy projects:
+                </p>
+                <br>
+                <br>
+                <h4 class="gamesSubHeader">Unity 3D Games</h4>
+                <div class="row gamesBox">
+                    <div class="col-sm-2 gamesBoxPic">
+                        <a href="http://www3.cs.stonybrook.edu/~richard/projects/FallingSimulator2014/index.html"><img src="fallingSimulatorIcon.png" alt="Falling Simulator Icon"></a>
+                    </div>
+                    <div class="col-sm-2 gamesBoxTitle">
+                        <h5>Falling Simulator 2014</h5>
+                    </div>
+                    <div class="col-sm-6 gamesBoxText" id="fallingSimulatorText">
+                        <p>
+                            My project for CSE 381: Advanced Game Programming, Falling Simulator was the result of a joke that me and my partner Alice Quiros ended up turning into a full experience. With randomly spawned objects to avoid and powerups which range from helpful parachutes to harmful twisters which send you spinning out of control, Falling Simulator is an unpredictable game that I like to describe as "stupid fun".
+                            <br>
+                            <br>
+                            The game was taken to the 2015 Stony Brook Game Programming Competition, where it took 3rd place.
+                        </p>
+                    </div>
+                </div>
+                <div class="row gamesBox">
+                    <div class="col-sm-2 gamesBoxPic">
+                        <a href="http://piccolomaster336.github.io/GradGame/"><img src="gradGameIcon.png" alt="Grad Game Icon" id="gradGamePic"></a>
+                    </div>
+                    <div class="col-sm-2 gamesBoxTitle">
+                        <h5>Graduation Game</h5>
+                    </div>
+                    <div class="col-sm-6 gamesBoxText">
+                        <p>
+                            A game I made over the course of about 2 days as a graduation gift for my friends. The goal is simple: collect all of the cubes hidden around the level. However, every time you grab a cube, a sphere spawns in the sky above you and begins to hunt you down. Can you avoid them long enough to find every cube?
+                        </p>
+                    </div>
+                </div>
+                <br>
+                <h4 class="gamesSubHeader">Card/Board Games</h4>
+                                <div class="row gamesBox">
+                    <div class="col-sm-2 gamesBoxPic">
+                        <a href="Instructions.pdf"><img src="pdfIcon.jpeg" alt="PDF Icon" id="pdfPic"></a>
+                    </div>
+                    <div class="col-sm-2 gamesBoxTitle">
+                        <h5>Align 4</h5>
+                    </div>
+                    <div class="col-sm-6 gamesBoxText">
+                        <p>
+                            A simple card game I designed, based on the famous game Connect 4. Players take turns playing cards, trying to line up 4 of their cards in a row while flipping their opponent's cards to stop them from winning.
+                        </p>
+                    </div>
+                </div>
+                
+                <br>
+                <hr style="opacity: 0;">
             </div>
 
             <!-- Music Tab -->
