--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h4 class="gamesSubHeader">Unity 3D Games</h4>
                 <div class="row gamesBox">
                     <div class="col-sm-2 gamesBoxPic">
-                        <a href="http://www3.cs.stonybrook.edu/~richard/projects/FallingSimulator2014/index.html"><img src="fallingSimulatorIcon.png" alt="Falling Simulator Icon"></a>
+                        <a href="http://www3.cs.stonybrook.edu/~richard/projects/FallingSimulator2014/index.html"><img src="fallingSimulatorIcon.png" alt="Falling Simulator Icon" id="fsPic"></a>
                     </div>
                     <div class="col-sm-2 gamesBoxTitle">
                         <h5>Falling Simulator 2014</h5>
