--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                 <br>
                 <div class="row">
                     <div class="col-sm-8" id="whoamiText">
-                        <p>Hey there, I'm Ryan Kelly. I'm a Software Engineer with a B.S. in Computer Science from Stony Brook University.
+                        <p>Hey there, I'm Ryan Kelly, and I'm a Software Engineer. I have a B.S. in Computer Science from Stony Brook University, and I'm currently working towards a Master's in Computer Science from Johns Hopkins University.
                             <br>
                             <br>
                             My two loves are for video games and music. It's rare to find me spending my free time on anything other than one of those. I enjoy creating and playing both music and video games, and hope to one day make a living off of it. I'd be just as happy making a game as I would be writing its soundtrack.
                         </p>
-                        <a href="resume.pdf">
+                        <a href="Resume2019.pdf">
                             <div class="col-sm-3" id="whoamiResumeBox">
                                 <h3>Résumé</h3>
                             </div>
