Changed opening to reflect current job position, updated resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li><a data-toggle="tab" href="#sharpeez">Sharpeez</a></li>
                 </ul>
             </div>
-            <div class-"col-sm-1"></div>
+            <div class="col-sm-1"></div>
         </div>
 
         <hr class="blueBar">
@@ -87,12 +87,12 @@
                 <br>
                 <div class="row">
                     <div class="col-sm-8" id="whoamiText">
-                        <p>Hey there, I'm Ryan Kelly, and I'm a Software Engineer. I have a B.S. in Computer Science from Stony Brook University, and I'm currently working towards a Master's in Computer Science from Johns Hopkins University.
+                        <p>Hey there, I'm Ryan Kelly, and I'm a Software Engineer. I currently work for Persistent Systems as a consultant working for IBM. I have a M.S. in Computer Science from Johns Hopkins University with a focus in cybersecurity, and a B.S. in Computer Science from Stony Brook University.
                             <br>
                             <br>
                             My two loves are for video games and music. It's rare to find me spending my free time on anything other than one of those. I enjoy creating and playing both music and video games, and hope to one day make a living off of it. I'd be just as happy making a game as I would be writing its soundtrack.
                         </p>
-                        <a href="Resume2019.pdf">
+                        <a href="Resume2023.pdf">
                             <div class="col-sm-3" id="whoamiResumeBox">
                                 <h3>Résumé</h3>
                             </div>
